update test code